# Mnemosyne

./: .gitignore  Cargo.toml  README.md  TODO.md
LLM_STATE/mnemosyne-orchestrator/: backlog.md  latest-session.md  memory.md  prompt-reflect.md  prompt-triage.md  prompt-work.md  related-plans.md  session-log.md
LLM_STATE/sub-A-global-store/: backlog.md  memory.md  prompt-reflect.md  prompt-triage.md  prompt-work.md
LLM_STATE/sub-B-phase-cycle/: backlog.md  memory.md  prompt-reflect.md  prompt-triage.md  prompt-work.md  related-plans.md
LLM_STATE/sub-C-adapters/: backlog.md  memory.md  prompt-reflect.md  prompt-triage.md  prompt-work.md  session-log.md
LLM_STATE/sub-D-coordination/: backlog.md  memory.md
LLM_STATE/sub-E-ingestion/: backlog.md  memory.md  prompt-reflect.md  prompt-triage.md  prompt-work.md
LLM_STATE/sub-F-hierarchy/: backlog.md  memory.md  prompt-work.md
LLM_STATE/sub-M-observability/: backlog.md  memory.md  prompt-reflect.md  prompt-triage.md  prompt-work.md
LLM_STATE/sub-N-domain-experts/: backlog.md  memory.md  prompt-work.md
defaults/: config.yml  gitignore
docs/: architecture.md  configuration.md  evaluation-strategy.md  evolution-guide.md  knowledge-format.md  plugin-development.md  reference.md  research-sources.md  user-guide.md
eval/: Cargo.toml
src/: config.rs  lib.rs  main.rs
tests/: config_test.rs  contradiction_test.rs  detect_test.rs  divergence_test.rs  entry_test.rs  index_test.rs  init_test.rs  install_test.rs  mapping_test.rs  promote_test.rs  query_test.rs  store_test.rs  supersede_test.rs  tags_test.rs
(+136 files in other folders)
